geosailing: minor updates

--- a/app/geosailing/trunk/svr2007/server/webapp/popup/comment.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/popup/comment.html
@@ -1,4 +1,4 @@
-<div class="infopopup" id="commentpanel">
+<div class="helpbody" id="commentpanel">
 	<form id="commentform" name="commentform" method="get" action="#" onsubmit="return CMT.addComment();">
 		<table border="0" cellspacing="4" cellpadding="4">
 			<tr>
@@ -31,7 +31,16 @@
 		</table>
 	</form>
 	<span class="cmtlink"><a id="addcommentlink" href="#" onclick="CMT.showAddCommentForm()">Klik hier om een commentaar toe te voegen &gt;&gt;</a></span>
-	<h3>Commentaren</h3>
+	<h2>Mededelingen</h2>
+	Hieronder medelingen van het Geosailing team.
+	<hr/>
+	<p>[7.jun 08:10] - just - <i>alleen boten uitgerust met GPS-transponder zijn zichtbaar op Geosailing !!</i></p>
+	<p>[7.jun 09:03] - just - <i>Yachtvision als eerste bij Kornwerder sluizen</i> </p>
+	<p>[7.jun 11:07] - just - <i>Op elkaar wachten en dan gezamelijk door de sluis Kornwerder zand</i> </p>
+	<p>[7.jun 20:52] - dennis - <i>Update vanaf de Risdam, ergens vlakbij de Paardehoek: - Bijna alle schepen liggen vast in de paardenhoek. Alleen de Greyhound en de Barcarole zijn er doorheen gekomen. De Yachtvision en de Early Bird zijn omgedraaid en lijken de race te hebben verlaten (of hebben ze een andere tactiek?). De GPRS dekkiing is hier ongeveer 0, dus helaas geen respons van de transponders. Later meer !</i> </p>
+	<p>[7.jun 22:10] - dennis - <i>Update vanaf de Risdam, ergens vlakbij Vlieland: - Bijna alle schepen liggen nog steeds vast in de paardenhoek, de een wat schever dan de ander (er wordt zelfs gepoetst aan de kiel). De loper van de Greyhound is al zo'n 25 minuten onderweg op Vlieland. Gezien het tij zouden de schepen in de paardehoek rond 11:00 uur verder kunnen varen. De blinde tonnen zijn dan een risico, maar de schippers zijn in overleg om hier een veilige doortocht te zoeken. </i> </p>
+	<p>[7.jun 22:41] - dennis - <i>Update vanaf de Risdam, haven Vlieland - De Greyhound heeft net de haven verlaten, en vaart op dood tij terug. Veel schepen liggen nog bij de Paardehoek. De Yachtvision en waarschijnlijk de Early Bird nemen een alteratieve route.</i></p>
+	<h2>Commentaren</h2>
 	<div id="commentlist">
 		Bezig commentaren op te halen...
 	</div>
