--- a/app/geosailing/trunk/svr2007/server/webapp/popup/help.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/popup/help.html
@@ -1,38 +1,70 @@
-<div class="infopopup">
-	<p><b><i>Hier komt help tekst. Moet dus nog gemaakt....</i></b></p>
-	<h2>How to Navigate the Map</h2>
-	<hr/>
 
-	<p>
-		What you see is projected on a <a target="_new" href="http://www.google.com/apis/maps">Google Map</a>.<br/>
-	</p>
-
-	<h3>Zoom In/Out</h3>
-
-	<p>
-		Use the + and - icons in the upper left or the slider. Note that not all maps may support
-		very detailed zoom levels at all places in the world. Double clicking anywhere on the map also zooms
-		and centers the map.
-	</p>
-
-	<h3>Moving (Panning)</h3>
-
-	<p>
-		You can move (pan) the map by using the arrow icons in the upper left, but far
-		easier is to drag the map with your mouse.
-	</p>
-
-	<h3>Centering</h3>
-
-	<p>
-		Double-clicking anywhere on the map centers and zooms the map
-		at that point.
-	</p>
-
-	<h3>Selecting Maps</h3>
-
-	<p>
-		Choose a different map as background by using the options under the "Map" menu.
-		Some map-types may contain specific data/features like GPS-trace points.
-	</p>
+<div class="helpbody">
+	<div class="helpimageleft">
+  	<img src="popup/images/wis-knop.gif" width="100" height="19">
+	</div>
+	<div class="helptekstright">
+	Wis alle ingetekende routes.<br>Routes kunnen per boot opnieuw worden ingetekend (zie hieronder).
+	</div>
+	<div class="clearfloats"></div>
+	<div class="helpimageleft">
+  	<img src="popup/images/commentaar-knop.gif" width="103" height="19">	</div>
+	<div class="helptekstright">
+	Laat een bericht achter of lees de berichten van anderen.
+	</div>
+	<div class="clearfloats"></div>
+	<div class="helpimageleft">
+	<img src="popup/images/zoomuit-knop.gif" width="76" height="15">
+	</div>
+	<div class="helptekstright">
+	Nadat er is ingezoomd: zoom uit naar volledig overzicht.
+	</div>
+	<div class="clearfloats"></div>
+	<br>
+	<div class="helptitle">
+	De boten
+	</div>
+	<div class="helpimageleft">
+	<img src="popup/images/bootnaam-knop.gif" width="69" height="15">
+	</div>
+	<div class="helptekstright">
+	Klik op een boot om details en foto's te bekijken.
+	</div>
+	<div class="clearfloats"></div>
+	<div class="helpimageleft">
+	<img src="popup/images/route-knop.gif" width="36" height="15">
+	</div>
+	<div class="helptekstright">
+	Teken de afgelegde route van de boot in de kaart.
+	</div>
+	<div class="clearfloats"></div>
+	<div class="helpimageleft">
+	<img src="popup/images/volg-knop.gif" width="36" height="15">
+	</div>
+	<div class="helptekstright">
+	Zoom in en volg de boot. Klik opnieuw om het volgen uit te zetten.
+	</div>
+	<div class="clearfloats"></div>
+	<br>
+	<div class="helptitle">
+	De kaart
+	</div>
+	>> Sleep de kaart om deze te verplaatsen<br>
+	>> Dubbelklik op de kaart om in te zoomen<br>
+	>> Dubbelklik met de rechter-muisknop om uit te zoomen<br>
+	<br>
+	Voor zoomen en verplaatsen van de kaart kunnen ook de knoppen links bovenin het scherm worden gebruikt.<br>
+	<br>
+	<div class="helptitle">
+	Foto's
+	</div>
+	Fotos zijn per boot te bekijken. Klik op de naam van een boot in de lijst of op een boot-icoontje in de kaart. Er opent dan een klein scherm met informatie en foto's.<br>
+	Wanneer de route van een boot wordt ingetekend, of wanneer een boot wordt gevolgd, zijn de bij de boot behorende foto's als gekleurde vierkantjes op de kaart zichtbaar. Klik op een vierkantje om de foto te openen.
+	<br>
+	<div class="helptitle">
+	En verder
+	</div>
+	Op oudere computers kan de applicatie langzamer gaan werken naarmate er meer routes worden ingetekend. Wis routes als de applicatie te zwaar wordt.
+	Mochten zich grotere problemen voordoen: vernieuw het scherm ('F5').
 </div>
+
