--- a/app/diwi/trunk/client/web/mypage/inloggen.html
+++ b/app/diwi/trunk/client/web/mypage/inloggen.html
@@ -33,12 +33,10 @@ function load(url)
 </p>
 <p> ENTER PASSWORD :
 <input type="password" name="text1">
-  <input type="button" value="Check In" name="Submit" onclick=javascript:validate(text2.value,"free",text1.value,"javascript") >
+  <input type="button" value="Check In" name="Submit" onclick='javascript:validate(text2.value,"free",text1.value,"javascript")' >
 </p>
 
 </form>
 
-
-</font>
 </body>
 </html>
