--- a/app/diwi/trunk/client/web/mypage/mypage.html
+++ b/app/diwi/trunk/client/web/mypage/mypage.html
@@ -331,7 +331,7 @@ DH.addEvent(window, 'load', DIWI.init, false);
 
 <!-- Alles wat op mijnpagina getoond moet worden. ---------------------------------------------------->
 <div id="mijnpaginacontainer" style="display:none;">
-<div id="personaliabox"><img src="../home/images/videobox.gif" border="0"/></div>
+<div id="personaliabox"><img src="../media/images/videobox.gif" border="0"/></div>
 
 <div id="bullet"><img src="buttons/bullet.gif" border="0"/></div>
 
@@ -605,7 +605,7 @@ DH.addEvent(window, 'load', DIWI.init, false);
 
 <div id="maakroutebox" style="display:none"><img src="buttons/maakrouteblokken.gif" border="0"></div>
 
-<div id="leguitbox" style="display:block"><img src="../home/images/videobox.gif" border="0"></div>
+<div id="leguitbox" style="display:block"><img src="../media/images/videobox.gif" border="0"></div>
 
 <div id="leguitbullet" style="display:block"><img src="buttons/bullet.gif" border="0"></div>
 
