base: small changes here and there

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -28,6 +28,9 @@
 <hr/>
 
 <div id="highlitebox">
+	<h2>GeoSailing Live</h2>
+	<p>June 7, 2007 - checkout <a href="http://www.geosailing.com/svr">www.geosailing.com/svr</a> the coming 3 days,
+	a live GeoTracing event...</p>
 	<h2>Featured Tracks</h2>
 	<p>
 		Feb 14, 2007 (!). <a href="http://www.geotracing.com/gt/?cmd=showtrack&user=lavitaebella&id=2616489&zoom=14&map=blanc">Lavitaebella walks a heart</a>.
