diwi: spi further impl

--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="lib/gt/Record.js"></script>
 
 	<script type="text/javascript" src="js/KWClientDiWi.js"></script>
+	<script type="text/javascript" src="js/KWClientCMS.js"></script>
 	<script type="text/javascript" src="js/selectstartpage.js"></script>
 	<script type="text/javascript" src="js/DiWiNav.js"></script>
 	<script type="text/javascript" src="js/maakroute.js"></script>
