--- a/app/diwi/trunk/client/web/mypage/mypage.html
+++ b/app/diwi/trunk/client/web/mypage/mypage.html
@@ -600,7 +600,7 @@ DH.addEvent(window, 'load', DIWI.init, false);
 </div>
 
 <div id="butmaakeigenroute">
-	<a><img src="buttons/maakroute.gif" onMouseOver="" onMouseOut="" onClick="javascript:DIWI.maakroutes();" border="0"></a>
+	<a><img src="buttons/maakroute-submit.gif" onMouseOver="" onMouseOut="" onClick="javascript:DIWI.maakroutes();" border="0"></a>
 </div>
 
 <div id="maakroutebox" style="display:none"><img src="buttons/maakrouteblokken.gif" border="0"></div>
