--- a/app/diwi/trunk/client/web/pages/maakroute.html
+++ b/app/diwi/trunk/client/web/pages/maakroute.html
@@ -1,16 +1,6 @@
 <div id="maakroutecontainer">
 
-<h1>Maak Route</h1>
-
-<p>
-	Route maken...
-</p>
-
-<div id="paginaheader">
-	<p>
-		Route samenstellen<br>
-	</p>
-</div>
+<h2>Maak Route</h2>
 
 <div id="radiobuttons" class="radiocaption">
 	<input id="wandelen" name=rb1 type=radio onClick="selectWandelen()"> Wandelen
@@ -39,7 +29,7 @@
 </div>
 
 <div class="slidertext" id="besloten">
-	<input id="s1value" value="0" onChange="s1.setValue(parseInt(this.value))"/>%
+	<input id="s1value" size="3" size="3" value="0" onChange="s1.setValue(parseInt(this.value))"/>%
 </div>
 
 <div class="slidercaption" id="caption2">
@@ -51,7 +41,7 @@
 </div>
 
 <div class="slidertext" id="halfopen">
-	<input id="s2value" value="0" onChange="s2.setValue(parseInt(this.value))"/>%
+	<input id="s2value" size="3" value="0" onChange="s2.setValue(parseInt(this.value))"/>%
 </div>
 
 <div class="slidercaption" id="caption3">
@@ -63,7 +53,7 @@
 </div>
 
 <div class="slidertext" id="open">
-	<input id="s3value" value="0" onChange="s3.setValue(parseInt(this.value))"/>%
+	<input id="s3value" size="3" value="0" onChange="s3.setValue(parseInt(this.value))"/>%
 </div>
 
 <div class="slidercaption" id="caption4">
@@ -75,7 +65,7 @@
 </div>
 
 <div class="slidertext" id="bedrijven">
-	<input id="s4value" value="0" onChange="s4.setValue(parseInt(this.value))"/>%
+	<input id="s4value" size="3" value="0" onChange="s4.setValue(parseInt(this.value))"/>%
 </div>
 
 <div class="slidercaption" id="caption5">
@@ -87,7 +77,7 @@
 </div>
 
 <div class="slidertext" id="bewoning">
-	<input id="s5value" value="0" onChange="s5.setValue(parseInt(this.value))"/>%
+	<input id="s5value" size="3" value="0" onChange="s5.setValue(parseInt(this.value))"/>%
 </div>
 
 <div class="slidercaption" id="caption6">
@@ -99,7 +89,7 @@
 </div>
 
 <div class="slidertext" id="bos">
-	<input id="s6value" value="0" onChange="s6.setValue(parseInt(this.value))"/>%
+	<input id="s6value" size="3" value="0" onChange="s6.setValue(parseInt(this.value))"/>%
 </div>
 
 <div class="slidercaption" id="caption7">
@@ -111,7 +101,7 @@
 </div>
 
 <div class="slidertext" id="heide">
-	<input id="s7value" value="0" onChange="s7.setValue(parseInt(this.value))"/>%
+	<input id="s7value" size="3" value="0" onChange="s7.setValue(parseInt(this.value))"/>%
 </div>
 
 <div class="slidercaption" id="caption8">
@@ -123,7 +113,7 @@
 </div>
 
 <div class="slidertext" id="grasland">
-	<input id="s8value" value="0" onChange="s8.setValue(parseInt(this.value))"/>%
+	<input id="s8value" size="3" value="0" onChange="s8.setValue(parseInt(this.value))"/>%
 </div>
 
 <div class="slidercaption" id="caption9">
@@ -135,7 +125,7 @@
 </div>
 
 <div class="slidertext" id="zee">
-	<input id="s9value" value="0" onChange="s9.setValue(parseInt(this.value))"/>%
+	<input id="s9value" size="3" value="0" onChange="s9.setValue(parseInt(this.value))"/>%
 </div>
 
 <div class="slidercaption" id="caption10">
@@ -147,11 +137,11 @@
 </div>
 
 <div class="slidertext" id="sloten">
-	<input id="s10value" value="0" onChange="s10.setValue(parseInt(this.value))"/>%
+	<input id="s10value" size="3" value="0" onChange="s10.setValue(parseInt(this.value))"/>%
 </div>
 
 <div id="butmaakeigenroute">
-	<a><img src="media/buttons/maakroute.gif" onMouseOver="" onMouseOut="" onClick="javascript:DIWIAPP.createRoute();"
+	<a><img src="media/buttons/maakroute-submit.gif" onMouseOver="" onMouseOut="" onClick="javascript:DIWIAPP.createRoute();"
 			border="0"></a>
 </div>
 
