--- a/app/diwi/trunk/client/web/pages/welkom.html
+++ b/app/diwi/trunk/client/web/pages/welkom.html
@@ -20,7 +20,7 @@
 </p>
 
 <p>
-	<img src="home/images/pda.gif" border="0" align="left">
+	<img src="media/images/pda.gif" border="0" align="left">
 	<strong>Een slim apparaat</strong><br>
 </p>
 
